<resources>
    <string name="app_title" translatable="false">Playlist maker</string>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search_btn_title">Search</string>
    <string name="media_btn_title">Media library</string>
    <string name="settings_btn_title">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="darktheme_switch">Dark theme</string>
    <string name="share_application">Share application</string>
    <string name="write_to_support">Write to support</string>
    <string name="license_agreement">Terms of use</string>
    <string name="search_title">Search</string>
    <string name="media_library_title">Media library</string>

    <string name="support_email" translatable="false">freeman@blackmesa.ru</string>
    <string name="mailto_support_subject">Message to Playlist Maker application developers</string>
    <string name="mailto_support_text">Thank you for the awesome application!</string>
    <string name="agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer</string>
    <string name="application_link" translatable="false">https://practicum.yandex.ru/android-developer</string>
    <string name="test_string" translatable="false">test test test test test</string>
    <string name="nothing_found">Nothing found</string>
    <string name="update">Update</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="load_failed">Load failed. Check your internet connection</string>
    <string name="something_went_wrong">something_went_wrong</string>
    <string name="track_duration_mask" translatable="false">mm:ss</string>
    <string name="clear_history">Clear history</string>
    <string name="you_searched">You searched</string>
    <string name="duration_caption">Duration</string>
    <string name="album_caption">Album</string>
    <string name="year_caption">Year</string>
    <string name="genre_caption">Genre</string>
    <string name="country_caption">Country</string>
    <string name="duration_placeholder" translatable="false">00:00</string>

    <string name="back_button_description" translatable="false">back_button</string>
    <string name="track_holder_description" translatable="false">track_holder</string>
    <string name="add_track_button_description" translatable="false">add_button</string>
    <string name="play_button_description" translatable="false">play_button</string>
    <string name="pause_button_description" translatable="false">pause_button</string>
    <string name="like_button_description" translatable="false">like_button</string>

    <string name="favorites_tab">Favorite tracks</string>
    <string name="playlists_tab">Playlists</string>
    <string name="message_medialibrary_isempty">Library is empty</string>
    <string name="message_noplaylist">No playlist created</string>
    <string name="new_playlist_button">New playlist</string>

    <string name="check_connection_message">Check your internet connection</string>
    <string name="server_error_message">Server error</string>
    <string name="create_playlist_title">New playlist</string>
    <string name="edit_playlist_title">Edit</string>
    <string name="playlist_name_caption">Name*</string>
    <string name="playlist_description_caption">Description</string>
    <string name="playlist_create_button_caption">Create</string>
    <string name="playlist_save_button_caption">Save</string>
    <string name="playlist_exit_title">Finish to create playlist?</string>
    <string name="playlist_exit_text">All unsaved data will be lost</string>
    <string name="cancel_button">Cancel</string>
    <string name="finish_button">Finish</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="added_to_playlist">Added to playlist %s</string>
    <string name="added_before">Track has already added to playlist %s</string>
    <string name="playlist_created">Playlist %s created</string>

    <string name="track_count_0">tracks</string>
    <string name="track_count_1">track</string>
    <string name="track_count_2_4">tracks</string>
    <string name="track_count_5_20">tracks</string>

    <string name="track_duration_0">minutes</string>
    <string name="track_duration_1">minute</string>
    <string name="track_duration_2_4">minutes</string>
    <string name="track_duration_5_20">minutes</string>

    <string name="delete_track_dialog">Do you want to delete track?</string>
    <string name="delete_playlist_dialog">Do you want to delete playlist \"%s\"?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">OK</string>
    <string name="no_track_dialog">Here is no track in playlist to share</string>
    <string name="share">Share</string>
    <string name="edit_playlist_information">Edit playlist information</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="empty_playlist">No track in playlist</string>

</resources>