<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BackgroundLinearLayout">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/RegularToolbarLayout">
        <com.google.android.material.appbar.MaterialToolbar
            style="@style/RegularToolbar"
            android:id="@+id/settingsToolbar"
            app:title="@string/settings_title"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/BasicListStyle"
        android:checked="?attr/dark_mode"
        android:text="@string/darktheme_switch"/>

    <TextView
        android:id="@+id/share_application"
        style="@style/BasicListStyle"
        android:text="@string/share_application"
        app:drawableEndCompat="@drawable/graph"/>

    <TextView
        android:id="@+id/write_to_support"
        style="@style/BasicListStyle"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/caller"/>

    <TextView
        android:id="@+id/read_agreement"
        style="@style/BasicListStyle"
        android:text="@string/license_agreement"
        app:drawableEndCompat="@drawable/smallarrow_right"/>

</LinearLayout>