<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.PlayListMaker.CommonActivity"
    tools:context=".settings.ui.SettingsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_title"
        style="@style/Widget.PlayListMaker.CommonActivity.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/Widget.PlayListMaker.SettingsItem"
        android:saveEnabled="false"
        android:text="@string/darktheme_switch"/>

    <TextView
        android:id="@+id/share_application"
        style="@style/Widget.PlayListMaker.SettingsItem"
        android:text="@string/share_application"
        app:drawableEndCompat="@drawable/graph"/>

    <TextView
        android:id="@+id/write_to_support"
        style="@style/Widget.PlayListMaker.SettingsItem"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/caller"/>

    <TextView
        android:id="@+id/read_agreement"
        style="@style/Widget.PlayListMaker.SettingsItem"
        android:text="@string/license_agreement"
        app:drawableEndCompat="@drawable/smallarrow_right"/>

</LinearLayout>