<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.PlayListMaker.CommonActivity"
    android:orientation="vertical"
    tools:context=".search.ui.TrackSearchFragment">

    <TextView
        style="@style/Widget.PlayListMaker.CommonActivity.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:padding="@dimen/margin_l" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_edit_text_layout"
        style="@style/Widget.PlayListMaker.SearchWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_l">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            style="@style/Widget.PlayListMaker.SearchWidget.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_title"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/margin_xs"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/track_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/history_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/Widget.PlayListMaker.MainText"
                    android:text="@string/you_searched" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/history_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/margin_l"

                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/track_item" />

                <Button
                    android:id="@+id/clear_history_button"
                    style="@style/Widget.PlayListMaker.SearchUpdateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_history" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/track_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_l"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/track_item" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nothing_found_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nothing_found" />

            <TextView
                style="@style/Widget.PlayListMaker.MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_l"
                android:text="@string/nothing_found" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/connection_error_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/connection_error" />

            <TextView
                style="@style/Widget.PlayListMaker.MainText"
                android:text="@string/no_internet_connection" />

            <TextView
                style="@style/Widget.PlayListMaker.MainText"
                android:text="@string/load_failed"
                android:textAlignment="center" />

            <Button
                android:id="@+id/repeat_search_button"
                style="@style/Widget.PlayListMaker.SearchUpdateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.PlayListMaker.ProgressBar"
            android:layout_width="@dimen/progress_bar"
            android:layout_height="@dimen/progress_bar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:visibility="gone" />

    </FrameLayout>


</LinearLayout>



