<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.PlayListMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Widget.PlayListMaker"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_long_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_xs" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_short_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_l" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_long_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_xs" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_short_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_l" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.PlayListMaker.CommonActivity.Toolbar"
                app:navigationIcon="@drawable/arrow_left" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/track_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_xxl"
            android:contentDescription="@string/track_holder_description"
            android:scaleType="centerCrop"
            android:src="@drawable/track_placeholder_236"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintDimensionRatio="h,1"
            app:layout_constraintEnd_toEndOf="@id/end_long_guideline"
            app:layout_constraintStart_toStartOf="@id/start_long_guideline"
            app:layout_constraintTop_toBottomOf="@id/topAppBarLayout" />

        <TextView
            android:id="@+id/track_name"
            style="@style/Widget.PlayListMaker.Player.Title1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xs"
            app:layout_constraintBottom_toTopOf="@id/group_name"
            app:layout_constraintEnd_toEndOf="@id/end_long_guideline"
            app:layout_constraintStart_toStartOf="@id/start_long_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_image"
            tools:text="Track name" />

        <TextView
            android:id="@+id/group_name"
            style="@style/Widget.PlayListMaker.Player.Title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            app:layout_constraintBottom_toTopOf="@id/track_play_button_placeholder"
            app:layout_constraintEnd_toEndOf="@id/end_long_guideline"
            app:layout_constraintStart_toStartOf="@id/start_long_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="Group name" />

        <ImageView
            android:id="@+id/track_add_button"
            style="@style/Widget.PlayListMaker.Player.SecondaryButton"
            android:layout_width="@dimen/button_m"
            android:layout_height="@dimen/button_m"
            android:contentDescription="@string/add_track_button_description"
            android:src="@drawable/add_track_button"
            app:layout_constraintBottom_toBottomOf="@id/track_play_button_placeholder"
            app:layout_constraintEnd_toStartOf="@id/track_play_button_placeholder"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/start_long_guideline"
            app:layout_constraintTop_toTopOf="@id/track_play_button_placeholder" />

        <View
            android:id="@+id/track_play_button_placeholder"
            android:layout_width="@dimen/button_l"
            android:layout_height="@dimen/button_l"
            android:layout_marginTop="@dimen/margin_xxl"
            app:layout_constraintBottom_toTopOf="@id/play_timer"
            app:layout_constraintEnd_toStartOf="@id/track_like_button"
            app:layout_constraintStart_toEndOf="@id/track_add_button"
            app:layout_constraintTop_toBottomOf="@id/group_name" />

        <ImageView
            android:id="@+id/track_play_button"
            style="@style/Widget.PlayListMaker.Player.MainButton"
            android:layout_width="@dimen/button_l"
            android:layout_height="@dimen/button_l"
            android:contentDescription="@string/play_button_description"
            android:src="@drawable/play_track_button"
            app:layout_constraintBottom_toBottomOf="@id/track_play_button_placeholder"
            app:layout_constraintEnd_toEndOf="@id/track_play_button_placeholder"
            app:layout_constraintStart_toStartOf="@id/track_play_button_placeholder"
            app:layout_constraintTop_toTopOf="@id/track_play_button_placeholder" />

        <ImageView
            android:id="@+id/track_pause_button"
            style="@style/Widget.PlayListMaker.Player.MainButton"
            android:layout_width="@dimen/button_l"
            android:layout_height="@dimen/button_l"
            android:contentDescription="@string/pause_button_description"
            android:src="@drawable/pause_track_button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/track_play_button_placeholder"
            app:layout_constraintEnd_toEndOf="@id/track_play_button_placeholder"
            app:layout_constraintStart_toStartOf="@id/track_play_button_placeholder"
            app:layout_constraintTop_toTopOf="@id/track_play_button_placeholder" />

        <ImageView
            android:id="@+id/track_like_button"
            style="@style/Widget.PlayListMaker.Player.SecondaryButton"
            android:layout_width="@dimen/button_m"
            android:layout_height="@dimen/button_m"
            android:contentDescription="@string/like_button_description"
            android:src="@drawable/like_track_button"
            app:layout_constraintBottom_toBottomOf="@id/track_play_button_placeholder"
            app:layout_constraintEnd_toEndOf="@id/end_long_guideline"
            app:layout_constraintStart_toEndOf="@id/track_play_button_placeholder"
            app:layout_constraintTop_toTopOf="@id/track_play_button_placeholder" />

        <TextView
            android:id="@+id/play_timer"
            style="@style/Widget.PlayListMaker.Player.Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxs"
            android:text="@string/duration_placeholder"
            app:layout_constraintBottom_toTopOf="@id/track_duration_caption"
            app:layout_constraintEnd_toEndOf="@id/track_play_button_placeholder"
            app:layout_constraintStart_toStartOf="@id/track_play_button_placeholder"
            app:layout_constraintTop_toBottomOf="@id/track_play_button_placeholder" />


        <TextView
            android:id="@+id/track_duration_caption"
            style="@style/Widget.PlayListMaker.Player.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/margin_l"
            android:text="@string/duration_caption"
            app:layout_constraintBottom_toTopOf="@id/track_album_caption"
            app:layout_constraintStart_toStartOf="@id/start_short_guideline"
            app:layout_constraintTag="duration_caption"
            app:layout_constraintTop_toBottomOf="@id/play_timer" />

        <TextView
            android:id="@+id/track_duration_value"
            style="@style/Widget.PlayListMaker.Player.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_l"
            app:layout_constraintBaseline_toBaselineOf="@id/track_duration_caption"
            app:layout_constraintEnd_toEndOf="@id/end_short_guideline"
            app:layout_constraintStart_toStartOf="@id/description_barrier"
            tools:text="4:56" />

        <TextView
            android:id="@+id/track_album_caption"
            style="@style/Widget.PlayListMaker.Player.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_l"
            android:text="@string/album_caption"
            app:layout_constraintBottom_toTopOf="@id/track_year_caption"
            app:layout_constraintStart_toStartOf="@id/start_short_guideline"
            app:layout_constraintTag="album_caption"
            app:layout_constraintTop_toBottomOf="@id/track_duration_caption" />

        <TextView
            android:id="@+id/track_album_value"
            style="@style/Widget.PlayListMaker.Player.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_l"
            app:layout_constraintBaseline_toBaselineOf="@id/track_album_caption"
            app:layout_constraintEnd_toEndOf="@id/end_short_guideline"
            app:layout_constraintStart_toStartOf="@id/description_barrier"
            tools:text="Album" />

        <TextView
            android:id="@+id/track_year_caption"
            style="@style/Widget.PlayListMaker.Player.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_l"
            android:text="@string/year_caption"
            app:layout_constraintBottom_toTopOf="@id/track_genre_caption"
            app:layout_constraintStart_toStartOf="@id/start_short_guideline"
            app:layout_constraintTag="year_caption"
            app:layout_constraintTop_toBottomOf="@id/track_album_caption" />

        <TextView
            android:id="@+id/track_year_value"
            style="@style/Widget.PlayListMaker.Player.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_l"
            app:layout_constraintBaseline_toBaselineOf="@id/track_year_caption"
            app:layout_constraintEnd_toEndOf="@id/end_short_guideline"
            app:layout_constraintStart_toStartOf="@id/description_barrier"
            tools:text="2007" />

        <TextView
            android:id="@+id/track_genre_caption"
            style="@style/Widget.PlayListMaker.Player.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_l"
            android:text="@string/genre_caption"
            app:layout_constraintBottom_toTopOf="@id/track_country_caption"
            app:layout_constraintStart_toStartOf="@id/start_short_guideline"
            app:layout_constraintTag="genre_caption"
            app:layout_constraintTop_toBottomOf="@id/track_year_caption" />

        <TextView
            android:id="@+id/track_genre_value"
            style="@style/Widget.PlayListMaker.Player.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_l"
            app:layout_constraintBaseline_toBaselineOf="@id/track_genre_caption"
            app:layout_constraintEnd_toEndOf="@id/end_short_guideline"
            app:layout_constraintStart_toStartOf="@id/description_barrier"
            tools:text="Genre" />

        <TextView
            android:id="@+id/track_country_caption"
            style="@style/Widget.PlayListMaker.Player.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_short_guideline"
            app:layout_constraintTag="country_caption"
            app:layout_constraintTop_toBottomOf="@id/track_genre_caption" />

        <TextView
            android:id="@+id/track_country_value"
            style="@style/Widget.PlayListMaker.Player.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/track_country_caption"
            app:layout_constraintEnd_toEndOf="@id/end_short_guideline"
            app:layout_constraintStart_toStartOf="@id/description_barrier"
            tools:text="Country" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/description_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="duration_caption, album_caption, year_caption, genre_caption, country_caption" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet"
        style="@style/Widget.PlayListMaker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="500dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_xs"
            android:background="@color/yp_light_gray" />

        <TextView
            style="@style/Widget.PlayListMaker.MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_to_playlist" />

        <Button
            android:id="@+id/create_playlist"
            style="@style/Widget.PlayListMaker.SearchUpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_playlist_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistsBottomRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/playlist_bottom_item" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>